--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.14.4",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-firebase/app": "^22.4.0",
-    "@react-native-firebase/storage": "^22.4.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -36,16 +35,20 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
-    "firebase": "^11.10.0",
+    "firebase": "^10.7.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-tab-view": "^4.1.2",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "tslib": "^2.8.1",
+    "use-latest-callback": "^0.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
